--- a/ProgettoCodice/app/src/main/res/values/strings.xml
+++ b/ProgettoCodice/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">NaTour2021</string>
-    <string name="title_activity_home">Home</string>
+    <string name="app_name">ProgettoINGSW</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
