aggiornamento dei valori per la key di Google maps e funzionamento accertato di navigazione pitch e palm del MapsFragment.java

--- a/ProgettoCodice/app/src/main/res/values/strings.xml
+++ b/ProgettoCodice/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-    <string name="AIzaSyDRsJPzn34e2zENXmqSQuHoDH_p0yGeaAM">MapsApiKey</string>
+    <string name="AIzaSyDRsJPzn34e2zENXmqSQuHoDH_p0yGeaAM">AIzaSyDRsJPzn34e2zENXmqSQuHoDH_p0yGeaAM</string>
 </resources>
