--- a/ProgettoCodice/app/src/main/res/values/strings.xml
+++ b/ProgettoCodice/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ProgettoINGSW</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <!--  Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_home">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
