aggiornamento della Home  e collegamento alle impostazioni con modifiche grafiche al menù laterale(incompleto)

--- a/ProgettoCodice/app/src/main/res/values/strings.xml
+++ b/ProgettoCodice/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="title_activity_impostazioni">Impostazioni</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+    <string name="title_activity_homev2">Homev2</string>
 </resources>
